1,增加List<StableValue<String>>测试 2,提供允许非cracked mh转换为sam的实现类